[package]
name = "ytrss"
version = "0.1.2"
edition = "2024"
authors = ["Cal Richards acc@calrichards.io"]
license = "MIT"
description = "Quickly get RSS feed URLs from YouTube channel urls"
readme = "README.md"
homepage = "https://github.com/caliguIa/ytrss"
repository = "https://github.com/caliguIa/ytrss"
keywords = ["cli", "rss", "youtube"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
futures = "0.3.31"
reqwest = "0.12.18"
select = "0.6.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
